--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    Copyright (C) 2009 DANS (info@dans.knaw.nl)
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+            http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -12,21 +29,9 @@
 		<name>DANS</name>
 		<url>http://www.dans.knaw.nl/en</url>
 	</organization>
-
-	<mailingLists>
-		<mailingList>
-			<archive>https://sourceforge.net/mailarchive/forum.php?forum_name=dans-dbf-lib-users</archive>
-			<name>dans-dbf-lib-users</name>
-			<post>dans-dbf-lib-users@lists.sourceforge.net</post>
-			<subscribe>https://lists.sourceforge.net/lists/listinfo/dans-dbf-lib-users</subscribe>
-			<unsubscribe>https://lists.sourceforge.net/lists/listinfo/dans-dbf-lib-users</unsubscribe>
-		</mailingList>
-	</mailingLists>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
 	<developers>
 		<developer>
 			<name>Jan van Mansum</name>
@@ -49,79 +54,32 @@
 			<timezone>+1</timezone>
 		</developer>
 	</developers>
-
-	<issueManagement>
-		<system>Tracker</system>
-		<url>https://sourceforge.net/tracker/?group_id=258772&amp;atid=1127258</url>
-	</issueManagement>
-
-	<licenses>
-		<license>
-			<name>GNU Public License</name>
-			<url>http://www.gnu.org/copyleft/gpl.html</url>
-		</license>
-	</licenses>
-
-	<scm>
-		<connection>scm:svn:https://dans-dbf-lib.svn.sourceforge.net/svnroot/dans-dbf-lib</connection>
-		<url>http://dans-dbf-lib.svn.sourceforge.net/viewvc/dans-dbf-lib/</url>
-	</scm>
-
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0-beta-3</version>
-				<configuration>
-					<reportPlugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-project-info-reports-plugin</artifactId>
-							<version>2.5.1</version>
-						</plugin>
-						<plugin>
-							<artifactId>maven-jxr-plugin</artifactId>
-							<configuration>
-								<aggregate>true</aggregate>
-							</configuration>
-							<version>2.3</version>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-surefire-report-plugin</artifactId>
-							<version>2.4.2</version>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>cobertura-maven-plugin</artifactId>
-							<version>2.5.1</version>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-pmd-plugin</artifactId>
-							<version>2.3</version>
-							<configuration>
-								<linkXref>true</linkXref>
-								<targetJdk>1.6</targetJdk>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-javadoc-plugin</artifactId>
-							<version>2.8.1</version>
-						</plugin>
-					</reportPlugins>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.wagon</groupId>
-						<artifactId>wagon-ssh</artifactId>
-						<version>2.2</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-
+            <plugin>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>2.11</version>
+                <configuration>
+                    <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
+                    <properties>
+                        <owner>DANS</owner>
+                        <email>info@dans.knaw.nl</email>
+                    </properties>
+                    <excludes>
+                        <exclude>LICENSE</exclude>
+                        <exclude>**/README</exclude>
+                        <exclude>src/test/resources/**</exclude>
+                        <exclude>src/main/resources/**</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>process-sources</phase>
+                        <goals><goal>check</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
@@ -195,6 +153,11 @@
 				</executions>
 			</plugin>
 
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+            </plugin>
+
 		</plugins>
 	</build>
 
@@ -205,24 +168,4 @@
 			<version>4.5</version>
 		</dependency>
 	</dependencies>
-
-	<distributionManagement>
-		<site>
-			<id>sourceforge-dans-dbf-lib</id>
-			<name>Sourceforge Server</name>
-			<url>file://${user.home}/Temp/dans-dbf-lib-site/</url>
-		</site>
-	</distributionManagement>
-	<profiles>
-		<profile>
-			<id>production</id>
-			<distributionManagement>
-				<site>
-					<id>sourceforge-dans-dbf-lib</id>
-					<name>DANS DBF Library SourceForge Site</name>
-					<url>scp://jvm1971@shell.sourceforge.net:/home/project-web/dans-dbf-lib/htdocs</url>
-				</site>
-			</distributionManagement>
-		</profile>
-	</profiles>
 </project>
